--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  text-align: center;
+  background-color: rgb(76, 164, 109);
 }
 
 .color {
@@ -49,5 +51,14 @@ body {
 
 #clear-board {
   display: block;
-  margin: 30px;
+  margin-left: 90%;
+  height: 30px;
+  border-radius: 50%;
+
+}
+
+#entrada {
+  margin: 10px;
+  width: 60px;
+  text-align: center;
 }
